--- a/static/manifest.json
+++ b/static/manifest.json
@@ -4,7 +4,7 @@
 	"name": "TODO",
 	"short_name": "TODO",
 	"display": "minimal-ui",
-	"start_url": "/",
+	"start_url": "/resume",
 	"icons": [
 		{
 			"src": "logo-192.png",
