--- a/package.json
+++ b/package.json
@@ -11,31 +11,32 @@
   },
   "dependencies": {
     "compression": "^1.7.1",
-    "polka": "next",
+    "express": "^4.17.1",
     "sirv": "^1.0.0"
   },
   "devDependencies": {
-    "sapper": "^0.28.0",
-    "svelte": "^3.17.3",
     "@babel/core": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/runtime": "^7.0.0",
     "@rollup/plugin-babel": "^5.0.0",
-    "@rollup/plugin-commonjs": "^14.0.0",
-    "@rollup/plugin-node-resolve": "^8.0.0",
-    "@rollup/plugin-replace": "^2.2.0",
-    "@rollup/plugin-url": "^5.0.0",
+    "@rollup/plugin-commonjs": "^21.0.0",
+    "@rollup/plugin-node-resolve": "^13.0.5",
+    "@rollup/plugin-replace": "^3.0.0",
+    "@rollup/plugin-typescript": "^8.2.5",
+    "@rollup/plugin-url": "^6.1.0",
+    "@tsconfig/svelte": "^2.0.1",
+    "@types/compression": "^1.7.0",
+    "@types/express": "^4.17.13",
+    "@types/node": "^16.10.3",
+    "@types/polka": "^0.5.1",
     "rollup": "^2.3.4",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
-    "@rollup/plugin-typescript": "^6.0.0",
-    "@tsconfig/svelte": "^1.0.10",
-    "@types/compression": "^1.7.0",
-    "@types/node": "^14.11.1",
-    "@types/polka": "^0.5.1",
-    "svelte-check": "^1.0.46",
+    "sapper": "^0.29.3",
+    "svelte": "^3.17.3",
+    "svelte-check": "^2.2.6",
     "svelte-preprocess": "^4.3.0",
     "tslib": "^2.0.1",
     "typescript": "^4.0.3"
