--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "sapper": "^0.29.3",
     "svelte": "^3.17.3",
     "svelte-check": "^2.2.6",
+    "svelte-feather-icons": "^3.5.0",
     "svelte-preprocess": "^4.3.0",
     "tslib": "^2.0.1",
     "typescript": "^4.0.3"
